Fix accessibility issue (contrast)

--- a/src/app/components/ThemeSwitcher.module.css
+++ b/src/app/components/ThemeSwitcher.module.css
@@ -11,7 +11,7 @@
 .label {
     width: 48px;
     height: 24px;
-    background-color: #696969;
+    background-color: #333;
     display: flex;
     border-radius: 24px;
     align-items: center;
@@ -40,8 +40,8 @@
     top: 45%;
     transform: translateY(-50%);
     font-size: 13px;
-    color: #333;
-    transition: content .4s, color .4s, left .4s, right .4s;
+    filter: brightness(1.2);
+    transition: content .4s, filter .4s, left .4s, right .4s;
 }
 
 .checkbox:checked + .label {
